2018-08-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/xspara.c (xspara_get_pending, xspara_add_pending_word)
	xspara_end, xspara_add_next, xspara_add_text): Save storage for 
	text buffers in static variables to avoid memory leak.
	* tp/Texinfo/XS/text.c (text_reset): New function.

2018-08-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/misc.c (xs_parse_texi_regex): Retain all memory
	allocated on the heap in static pointers.  Perl does not free 
	them, as when SV's are initialized with sv_setpv, the data 
	pointed to is copied, not the pointer itself.  This memory leak 
	is visible with valgrind, e.g. run TEXINFO_XS=debug PERL_DESTRUCT_LEVEL=2 valgrind --log-file=val.log --leak-check=full perl -w t/02coverage.t commands

2018-08-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Makefile.am (EXTRA_DIST) Do not distribute tp/Makefile.PL 
	or tp/MANIFEST.
	* tp/Texinfo/XS/Makefile.am: Do not distribute Makefile.PL,
	MANIFEST or prepare_standalone_perl_module.sh.

	This is to reduce confusion about whether these files are needed 
	for "make dist".

2018-08-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/README: Clarify purpose of regenerate_file_lists.pl.  Do 
	not mention prepare_perl_module_files.sh.

2018-08-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS: Run "gnulib --add-import strndup".

2018-08-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS: Run "gnulib --add-import iconv".
	* tp/Texinfo/XS: Run "gnulib --add-import strchrnul".

2018-08-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS: Put subdirectories 'lib' and 'm4' inside new 
	subdirectory 'gnulib' (as is done in the top-level gnulib 
	import).
	* tp/Texinfo/XS/Makefile.am (AM_CPPFLAGS, ACLOCAL_AMFLAGS, SUBDIRS)
	(EXTRA_DIST),
	* tp/Texinfo/XS/configure.ac (AC_CONFIG_MACRO_DIR, AC_CONFIG_FILES):
	Update.

2018-08-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Makefile.am (AM_LOG_T_FLAGS): Remove -I flags.
